--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 50,
    "id": "ab3dff29",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,11 @@
     "import matplotlib.pyplot as plt\n",
     "from wordcloud import WordCloud\n",
     "import nltk\n",
-    "from nltk.corpus import stopwords\n"
+    "from nltk.corpus import stopwords\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import confusion_matrix,classification_report\n"
    ]
   },
   {
@@ -167,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "id": "fc6b1792",
    "metadata": {},
    "outputs": [],
@@ -232,6 +236,373 @@
    "source": [
     "create_cloud(\" \".join(neg_senti))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "c7d6c012",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "from nltk.stem import PorterStemmer\n",
+    "\n",
+    "def text_preprocessing(review):\n",
+    "    sen = re.sub(r'<br\\s*/?>', '', review)\n",
+    "    sen = re.sub(r\"won't\", \"will not\", sen)\n",
+    "    sen = re.sub(r\"can't\", \"can not\", sen)\n",
+    "    sen = re.sub(r'\\d+', '', sen)\n",
+    "    sen = re.sub(r'<[^>]+>', '', sen)\n",
+    "    sen = re.sub(r'[^\\w\\s]', '', sen)\n",
+    "\n",
+    "\n",
+    "    lower_sen = sen.lower()\n",
+    "    rem_stop = \" \".join(word for word in lower_sen.split() if word not in stop_word)\n",
+    "    porter = PorterStemmer()# lemmatizer\n",
+    "    stemmed = \" \".join(porter.stem(word) for word in rem_stop.split())\n",
+    "\n",
+    "    return stemmed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "95552414",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"clean_text\"]= df[\"review\"].apply(text_preprocessing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review</th>\n",
+       "      <th>sentiment</th>\n",
+       "      <th>clean_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>One of the other reviewers has mentioned that ...</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>one review mention watch oz episod youll hook ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A wonderful little production. &lt;br /&gt;&lt;br /&gt;The...</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>wonder littl product film techniqu unassum old...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>I thought this was a wonderful way to spend ti...</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>thought wonder way spend time hot summer weeke...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Basically there's a family where a little boy ...</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>basic there famili littl boy jake think there ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Petter Mattei's \"Love in the Time of Money\" is...</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>petter mattei love time money visual stun film...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              review sentiment  \\\n",
+       "0  One of the other reviewers has mentioned that ...  positive   \n",
+       "1  A wonderful little production. <br /><br />The...  positive   \n",
+       "2  I thought this was a wonderful way to spend ti...  positive   \n",
+       "3  Basically there's a family where a little boy ...  negative   \n",
+       "4  Petter Mattei's \"Love in the Time of Money\" is...  positive   \n",
+       "\n",
+       "                                          clean_text  \n",
+       "0  one review mention watch oz episod youll hook ...  \n",
+       "1  wonder littl product film techniqu unassum old...  \n",
+       "2  thought wonder way spend time hot summer weeke...  \n",
+       "3  basic there famili littl boy jake think there ...  \n",
+       "4  petter mattei love time money visual stun film...  "
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "f79cfdc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf= TfidfVectorizer(max_features=10000)\n",
+    "gbn= GaussianNB()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "60399b12",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50000, 10000)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encode=tf.fit_transform(df[\"clean_text\"])\n",
+    "encode.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "339ec67e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50000, 10000)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = encode.toarray()\n",
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "6cd390fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xtrain,xtest,ytrain,ytest=train_test_split(data,df[\"sentiment\"], test_size=.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.816425"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model=gbn.fit(xtrain,ytrain)\n",
+    "model.score(xtrain,ytrain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = model.predict(xtest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "b73fb0cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4100,  915],\n",
+       "       [1503, 3482]])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cm= confusion_matrix(ytest,pred)\n",
+    "cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "15c30815",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sentiment\n",
+       "negative    5015\n",
+       "positive    4985\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ytest.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Basically there's a family where a little boy (Jake) thinks there's a zombie in his closet & his parents are fighting all the time.<br /><br />This movie is slower than a soap opera... and suddenly, Jake decides to become Rambo and kill the zombie.<br /><br />OK, first of all when you're going to make a film you must Decide if its a thriller or a drama! As a drama the movie is watchable. Parents are divorcing & arguing like in real life. And then we have Jake with his closet which totally ruins all the film! I expected to see a BOOGEYMAN similar movie, and instead i watched a drama with some meaningless thriller spots.<br /><br />3 out of 10 just for the well playing parents & descent dialogs. As for the shots with Jake: just ignore them.\""
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"review\"][3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "91008f26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text=[\"Basically there's a family where a little boy (Jake) thinks there's a zombie in his closet & his parents are fighting all the time.<br /><br />This movie is slower than a soap opera... and suddenly, Jake decides to become Rambo and kill the zombie.<br /><br />OK, first of all when you're going to make a film you must Decide if its a thriller or a drama! As a drama the movie is watchable. Parents are divorcing & arguing like in real life. And then we have Jake with his closet which totally ruins all the film! I expected to see a BOOGEYMAN similar movie, and instead i watched a drama with some meaningless thriller spots.<br /><br />3 out of 10 just for the well playing parents & descent dialogs. As for the shots with Jake: just ignore them.\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.DataFrame(text, columns=[\"text\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "b597b108",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_text= data[\"text\"].apply(text_preprocessing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "c74156f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vec_data = tf.transform(clean_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "d087a9e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data= vec_data.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "59ba921e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['negative'], dtype='<U8')"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
